test/expected/explain_sic32.out
explain signed char32_t x
        ^
9: error: "signed char32_t" is illegal for built-in type
